compiler/testData/diagnostics/tests/sealed/NeverObject.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
<!WRONG_MODIFIER_TARGET!>sealed<!> object Sealed {

}
